[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wypt"
version = "0.0.1"
requires-python = ">=3.7"
description = "Why you paste that - a pastebin scraper"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { email = "preocts@preocts.com", name = "Preocts" }
]
maintainers = []
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "mypy",
    "types-toml",
    "flake8",
    "flake8-builtins",
]
test = [
    "pytest",
    "pytest-randomly",
    "coverage",
    "tox"
]

[project.urls]
homepage = "https://github.com/Preocts/wypt"
# documentation = ""
# repository = ""
# changelog = ""

# Package-data will be included in the build/install
[tool.setuptools.package-data]
"wypt" = ["py.typed"]
"wypt.tables" = ["*.sql"]

# CLI scripts if needed
[project.scripts]
wypt-scan = "wypt.cli:scan"

[tool.setuptools.packages.find]
where = ["src"]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = ["tests"]  # empty by default
namespaces = true  # true by default

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.coverage.run]
branch = true
source = [ "tests" ]
source_pkgs = [ "wypt" ]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\."
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"

# This is ignored by flake8, here in case they decide to add it in the future
[tool.flake8]
ignore = "W503,E203"
max-line-length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,py311,pre-commit
skip_missing_interpreters = true
isolated_build = True

[testenv]
deps = .[test]
commands =
    coverage erase
    coverage run -m pytest {posargs:tests}
    coverage xml
    coverage report --fail-under 90 --skip-empty -m

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
"""
